[gd_scene load_steps=4 format=3 uid="uid://dkrmtmmv8i775"]

[ext_resource type="Script" uid="uid://csxv7741f4umm" path="res://scripts/game_states/settings_menu.gd" id="1_myfk7"]
[ext_resource type="PackedScene" uid="uid://bplwjswntn1oe" path="res://scenes/templates/BackButton.tscn" id="2_nb64h"]
[ext_resource type="FontFile" uid="uid://krxwneoopk" path="res://assets/fonts/venera.otf" id="3_nb64h"]

[node name="SettingsMenu" type="Node2D"]
script = ExtResource("1_myfk7")

[node name="BackButton" parent="." instance=ExtResource("2_nb64h")]

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 192.0
offset_top = 128.0
offset_right = 1728.0
offset_bottom = 960.0
theme_override_constants/h_separation = 300
columns = 3

[node name="Audio" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="head" type="Label" parent="GridContainer/Audio"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb64h")
theme_override_font_sizes/font_size = 35
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_label" type="Label" parent="GridContainer/Audio"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb64h")
theme_override_font_sizes/font_size = 25
text = "Music Volume"
vertical_alignment = 2

[node name="music_volume" type="Control" parent="GridContainer/Audio"]
layout_mode = 2

[node name="HScrollBar" type="HScrollBar" parent="GridContainer/Audio/music_volume"]
layout_mode = 0
offset_top = -9.0
offset_right = 320.0
offset_bottom = -1.0

[node name="Label" type="Label" parent="GridContainer/Audio/music_volume"]
layout_mode = 0
offset_left = 328.0
offset_top = -13.0
offset_right = 384.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("3_nb64h")
theme_override_font_sizes/font_size = 20

[node name="sfx_label" type="Label" parent="GridContainer/Audio"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb64h")
theme_override_font_sizes/font_size = 25
text = "SFX Volume"
vertical_alignment = 2

[node name="sfx_volume" type="Control" parent="GridContainer/Audio"]
layout_mode = 2

[node name="HScrollBar" type="HScrollBar" parent="GridContainer/Audio/sfx_volume"]
layout_mode = 0
offset_top = -8.0
offset_right = 320.0

[node name="Label" type="Label" parent="GridContainer/Audio/sfx_volume"]
layout_mode = 0
offset_left = 328.0
offset_top = -10.0
offset_right = 384.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("3_nb64h")
theme_override_font_sizes/font_size = 20

[node name="mute" type="Control" parent="GridContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/Audio/mute"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_nb64h")
theme_override_font_sizes/font_size = 25
text = "Mute All"
vertical_alignment = 2

[node name="CheckButton" type="CheckButton" parent="GridContainer/Audio/mute"]
layout_mode = 0
offset_left = 128.0
offset_top = 2.0
offset_right = 172.0
offset_bottom = 26.0

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="GridContainer/Audio/music_volume/HScrollBar" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="GridContainer/Audio/sfx_volume/HScrollBar" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="GridContainer/Audio/mute/CheckButton" to="." method="_on_mute_button_pressed"]
